/*
Copyright (c) Advanced Micro Devices, Inc. All rights reserved.

Licensed under the Apache License, Version 2.0 (the \"License\");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an \"AS IS\" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


//----------------------------------------------------------------------------
///
/// \file
/// AMD Metrics Services
///
//----------------------------------------------------------------------------


syntax = "proto3";
option go_package = "gen/metricssvc"; 

package metricssvc;

import "google/protobuf/empty.proto";

enum GPUHealth {
	UNKNOWN     = 0;
	HEALTHY     = 1;
	UNHEALTHY   = 2;
}

message GPUState { 
    // id of the GPU
    string ID = 1;

    // health state string value of GPUHealth enum
    string Health = 2;

    // Workload associated with GPU
    repeated string AssociatedWorkload = 3;
} 

message GPUStateRequest {
    // list of id of the GPU
    repeated string ID = 1;
}

message GPUUpdateRequest {
    // list of id of the GPU
    repeated string ID = 1;
    // set health state string value of GPUHealth enum
    repeated string Health = 2;
}

message GPUStateResponse {
    // list of requested GPU States
    repeated GPUState GPUState = 1;
}

service MetricsService {
    // GPUState get API
    rpc GetGPUState(GPUStateRequest) returns (GPUStateResponse) {}

    rpc SetGPUHealth(GPUUpdateRequest) returns (GPUStateResponse) {}

    rpc List(google.protobuf.Empty) returns (GPUStateResponse) {}
}
